# dioxusmusic

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dioxus.toml  EXAMPLES.md  FEATURES.md  IMPLEMENTATION.md  QUICKSTART.md  README.md  STATUS.md  package_dmg.sh  tailwind.css
assets/: DioxusMusic.icns  main.css  tailwind.css
src/: crypto.rs  main.rs  main_backup.rs  metadata.rs  models.rs  player.rs  playlist.rs  playlist_manager.rs  webdav.rs
src/player/: lyrics.rs
