[package] 
name = "dioxusmusic" 
version = "0.1.0"
authors = ["taoshichang <taoshichang@pmlabs.com.cn>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
dioxus-desktop = "0.7"
rodio = "0.21"
metaflac = "0.2"
id3 = "1.16"
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream", "blocking"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
base64 = "0.21"
urlencoding = "2"
rfd = { version = "0.12", features = ["xdg-portal"] }
parking_lot = "0.12"
mp3-duration = "0.1"
image = "0.25"
rand = "0.8"
sha2 = "0.10"
once_cell = "1.19"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
